--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,12 +5,16 @@ v2.23 (???? 2020)
    spheretreeV2
    transfAddNorm
    transfDIFSPolyhedra
+   transfDIFSPolyhedraV2
    transfMandalayFold4d
+   transfSmooth
+   transfSmoothV2
 
 - modified fractal formulas
    transfStepXY added offset and scale
    transfScaleOffset fix DE
    transfScaleOffsetV2 fix DE
+
 
 
 v2.22 (July 2020)
