menger4d_mod2.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,6 +3,7 @@ Version history
 v2.23 (???? 2020)
 - Added new fractal formulas
    aexion4dV2
+   menger4dMod2
    spheretreeV2
    transfAddNorm
    transfDIFSPolyhedra
