--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,6 +5,7 @@ v2.23 (???? 2020)
    aexion4dV2
    menger4dMod2
    spheretreeV2
+   transfAddCpixel4d
    transfAddNorm
    transfDIFSPolyhedra
    transfDIFSPolyhedraV2
