fractal_transf_poly_fold_atan.cpp STARTED optimizing polyfolds

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,8 +1,12 @@
 Version history
 
-v2.2nnn  (mmm 2020)
+v2.24 (????? 2020)
 - Added new fractal formulas
+   mandelbulbAbs
    mandelbulbPlusZ
+   msltoeSym3Mod4
+   msltoeSym3Mod5
+   pseudoKleinianMod4
 
 
 - modified fractal formulas
