--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -2,6 +2,8 @@ Version history
 
 v2.24 (????? 2020)
 - Added new fractal formulas
+
+   aboxKlein
    mandelbulbAbs
    mandelbulbPlusZ
    msltoeSym3Mod4
