update t>difs cylinder optimize polyfold sym add missing DE tweal pk4 testing

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,4 +1,10 @@
 Version history
+v2.25 (???? 2021)
+- Added new fractal formulas
+
+
+- modified fractal formulas
+   add hollow option to T>DIFS cylinder
 
 
 
