fix scale mode2 mbox var

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -10,6 +10,7 @@ v2.25 (???? 2021)
 - modified fractal formulas
    T>DIFS cylinder, added hollow option to T>DIFS cylinder
    amazing box mod14, corrected rrCol color
+   mandelbox variable, fix vary scale mode 2
 
 
 
