--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ v2.25 (???? 2021)
    transfDIFSGearV1
    transfDIFSGridV3
    transfPolyFoldAtan2Iter
+   transfSinTan
 
 
 - modified fractal formulas
