--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -22,6 +22,7 @@ v2.25 (???? 2021)
    amazing box mod14, corrected rrCol color
    mandelbox variable, fix vary scale mode 2
    mandalay KIFS updated
+   menger4D mod2, add quadray
 
 
 
