pseudo_kleinian_mod5.ui

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,9 +5,9 @@ v2.25 (???? 2021)
    aboxMod15
    ifsGen
    josKleinianV3
-
    kochV4
    mandelnest
+   pseudoKleinianMod5
 
    transfAddConstantMod3
    transfBlockifyV2
