--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,14 +1,14 @@
 Version history
-v2.25 (???? 2021)
-- Added new fractal formulas
 
+v2.25 (April 2021)
+
+- Added new fractal formulas
    aboxMod15
    ifsGen
    josKleinianV3
    kochV4
    mandelnest
    pseudoKleinianMod5
-
    transfAddConstantMod3
    transfBlockifyV2
    transfDIFSDiamond
@@ -17,7 +17,6 @@ v2.25 (???? 2021)
    transfPolyFoldAtan2Iter
    transfSinTan
 
-
 - modified fractal formulas
    T>DIFS cylinder, added hollow option
    amazing box mod14, corrected rrCol color
@@ -25,8 +24,39 @@ v2.25 (???? 2021)
    mandalay KIFS updated
    menger4D mod2, add quadray
 
-
-
+- Lights: possible to define unlimited number of lights   
+- Lights: light sources organized as a tabs in UI
+- Lights: added New, Duplicate, Delete, Place buttons for lights
+- Lights: added selection of light decay function
+- Lights: added conical type of lights (spot lights)
+- Lights: added texture projection
+- Lights: position of the light can be absolute or relative to the camera
+- Lights: shadow parameters can be individually controlled for every light
+- Lights: every light can be used as a directional light (substitution for main light source)
+- Lights: removed UI elements for Main light source 
+- Lights: volumetric light UI elements moved to light source tab
+- Lights: light sources defined in old Mandelbulber versions are converted to new structures
+- Lights: random lights updated to work with new lights
+- Lights: added wire-frame preview of light sources
+- Lights: actually selected light is displayed as a bold lines
+- Lights: lights can be dragged using mouse pointer and moved forward/backward using ctrl+mouse wheel
+- Lights: added ball widget to control and preview light source direction (for directional lights)
+- Lights: added default texture for light projection (thanks to Stephen Sink for the texture)
+- Lights: intensity of random lights doesn't depend on number of them
+- OpenCL: Added detection of missing TdrLevel and TdrDelay settings in Windows registry.
+- OpenCL: Implemented environment mapping effect to OpenCL code
+- Shaders: Added fast shading for clouds when "receive shadows" option is off
+- Randomizer: If OpenCL is enable, Randomizer will not use CPU for rendering trials. It improves performance of randomizing.
+- UI: added importing of color palettes from https://coolors.co/ (copy/paste way)
+- UI: fixed bug: added missing "distance between eyes" editbox
+- Shaders: Fixed problem with application crashes caused by not-a-number results of NormalMap vector transformation
+- Shaders: Fixed problem with wrong rendering of specular highlight gradients in CPU mode
+- Performance: Reduced high memory usage caused by parameter containers and undo buffer
+- Performance: Reduced memory usage by textures
+- Rendering: Program crashed when was reduced number of CPUs to use
+- Code: removed depreciated Qt functions (prepared for Qt 6.0) 
+- Examples: added GPU benchmark for stronger GPUs (benchmark-GPU 2.fract)
+- Examples: added many examples
 
 v2.24 (December 2020)
 - Added new fractal formulas
