--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -4,14 +4,16 @@ v2.26 (????l 2021)
 
 - Added new fractal formulas
    amazingSurfM3d
+   hypercomplexV2
    mandelnestV2
+   pseudoKleinian4d
    transfDIFSSpring
+   transfRotationM3d
+   transfSphericalInvPnorm
 
 
 - modified fractal formulas
    mandelnest, added checkbox for aux.dist
-
-
 
 
 
