--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -4,7 +4,9 @@ v2.26 (????l 2021)
 
 - Added new fractal formulas
    amazingSurfM3d
+   boxFoldBulbV4
    hypercomplexV2
+   mandelbar
    mandelnestV2
    pseudoKleinian4d
    transfDIFSSpring
