mandelbulb_pow2_v3.ui

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -9,6 +9,7 @@ v2.26 (????l 2021)
    dIFSSAmazingIfs
    hypercomplexV2
    mandelbar
+   mandelbulbPow2V3
    mandelbulbQuadrat
    mandelnestV2
    pseudoKleinian4d
