--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -45,6 +45,7 @@ v2.26 (August 2021)
 - Animation: Added option to multiply or add value to selected range of cells in keyframe editor
 - Animation: Texture image sequences no longer need to start from 00000
 - Animation: Implemented saving of image frames by separate CPU thread.
+- Animation: Fixed bug #871: removing and re-adding parameter to animation table put wrong default value for parameter
 - AnimBySound: Added possibility to move keyframes in AudioSelector (dragging on the ruller)
 - AnimBySound: Added "sound delay" option in AnimBySound. Can be used to render part of animation which starts from the middle of sound
 - Shaders: Added advanced Denoiser for Monte Carlo rendering (uses zbuffer, surface normals, noise statistics)
@@ -63,6 +64,7 @@ v2.26 (August 2021)
 - Settings: Fixed bug: sometimes was wrong image proportion after loading settings (issue #847)
 - Settings: First and last frame to render parameters weren't loaded properly (issue #863)
 - Randomizer: Fixed bug #867. Starting of Randomizer didn't refreshed all parameters
+- Randomizer: issue #872: randomizer stops actual rendering and disables auto-refresh
 - Compilation: Travis CI switched to xenial and Qt 5.91
 - Compilation: add ArchLinux docker build with OpenCL support (issue #839)
 - Files: corrected file names in cache for ResourceHttpProvider
