--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,5 +1,21 @@
 Version history
 
+v2.27 (    2021)
+
+- Added new fractal formulas
+
+
+   transfDIFSSphereGrid
+
+   transfDIFSTorusTwist
+
+
+   transfSincos
+
+- modified fractal formulas
+   amazingSurfM3d, fix cylindrical fold
+
+
 v2.26 (August 2021)
 
 - Added new fractal formulas
