trying php populateOpenCL.php nondry

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -10,6 +10,7 @@ v2.27 (    2021)
    transfDIFSHelix
 
    transfDIFSSphereGrid
+   transfDIFSSphereGridV2
 
    transfDIFSTorusTwist
    transfPolyFoldXYV1
