transf_difs_sphere_grid_v3.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -8,13 +8,11 @@ v2.27 (    2021)
    mengerV4
    transfDIFSHeart
    transfDIFSHelix
-
    transfDIFSSphereGrid
    transfDIFSSphereGridV2
-
+   transfDIFSSphereGridV3
    transfDIFSTorusTwist
    transfPolyFoldXYV1
-
    transfSincos
    transfSphericalFoldV3
 
