msltoe_sym4_mod1.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ v2.27 (    2021)
    aboxSmooth
    menger3M3d
    mengerV4
+   msltoeSym4Mod1
    transfDIFSHeart
    transfDIFSHelix
    transfDIFSSphereGrid
