transf_difs_box_frame.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -8,6 +8,7 @@ v2.27 (    2021)
    menger3M3d
    mengerV4
    msltoeSym4Mod1
+   transfDIFSBoxFrame
    transfDIFSHeart
    transfDIFSHelix
    transfDIFSSphereGrid
