--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,8 +7,10 @@ v2.27 (    2021)
    aboxSmooth
    mandelbulbIqPow8
    mandelbulbIqV2
+   mandelnest4d
    menger3M3d
    mengerV4
+   mengerV5
    msltoeSym4Mod1
    transfDIFSBoxFrame
    transfDIFSHeart
