mandelbulb_sin_cos.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ v2.27 (    2021)
    aboxSmooth
    mandelbulbIqPow8
    mandelbulbIqV2
+   mandelbulbSinCos
    mandelnest4d
    menger3M3d
    mengerV4
