transf_difs_clip_plane.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -14,6 +14,7 @@ v2.27 (    2021)
    mengerV5
    msltoeSym4Mod1
    transfDIFSBoxFrame
+   transfDIFSClipPlane
    transfDIFSHeart
    transfDIFSHelix
    transfDIFSSphereGrid
