transf_spherical_fold_smooth img

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -4,6 +4,8 @@ v2.28 (February 2022)
 
 - Added new fractal formulas
 
+   transfSphericalFoldSmooth
+
 
 - modified fractal formulas
    transfMengerFold, add aux.color
