--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -4,11 +4,16 @@ v2.28 (  2022)
 
 - Added new fractal formulas
 
+   transfLowResMode
+   transfMengerFoldV2
+
    transfSphericalFoldSmooth
 
 
 - modified fractal formulas
    transfMengerFold, add aux.color
+   fractal::transfDIFSBox added rounding
+   fractal::transfDIFSBoxV3 fixed rounding
 
 
 
