--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,7 +3,8 @@ Version history
 v2.28 (  2022)
 
 - Added new fractal formulas
-
+   mandelbulbTails
+   mandelbulbTailsV2
    transfLowResMode
    transfMengerFoldV2
 
