--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,6 +5,7 @@ v2.28 (  2022)
 - Added new fractal formulas
    mandelbulbTails
    mandelbulbTailsV2
+   transfCayley2V1
    transfLowResMode
    transfMengerFoldV2
    transfAddSphericalInvert
@@ -13,7 +14,7 @@ v2.28 (  2022)
 
 
 - modified fractal formulas
-   MengerSponge, add aux.color
+   mengerSponge, add aux.color
    transfMengerFold, add aux.color
    fractal::transfDIFSBox added rounding
    fractal::transfDIFSBoxV3 fixed rounding
